--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <div class="outter-wrapper">
         <div class="inner-wrapper">
-            <div class="sedans">
+            <div class="sedans my-section">
                 <img src="./images/icon-sedans.svg" alt="">
                 <h2>SEDANS</h2>
                 <P>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
                     or on your next road trip.</P>
                     <button>Learn More</button>
             </div>
-            <div class="suvs">
+            <div class="suvs my-section">
                 <img src="./images/icon-suvs.svg" alt="">
                 <h2>SUVs</h2>
                 <P>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                     and off-road adventures.</P>
                     <button>Learn More</button>
             </div>
-            <div class="luxury">
+            <div class="luxury my-section">
                 <img src="./images/icon-luxury.svg" alt="">
                 <h2>LUXURY</h2>
                 <P>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
